Moving common JobProvider code to the base class; also, adding the possibility of including more than one task in a SimpleJob config.

--- a/examples/simple.yaml
+++ b/examples/simple.yaml
@@ -3,5 +3,8 @@ workdir: work/test
 stageout location: work/test
 
 type: simple
-cmd: sleep 900
-max: 25000
+
+tasks:
+    - label: 'test'
+      cmd: sleep 900
+      max: 25000
