--- a/examples/beanprod.yaml
+++ b/examples/beanprod.yaml
@@ -1,23 +1,25 @@
 id: <your id here>
 workdir: <your working directory here>
-
 stageout location: <your stageout directory here>
-#  stageout server: "earth.crc.nd.edu:9094"
-sandbox blacklist: ['*DrawPlots*']
-
-dbs url: 'https://cmsweb-testbed.cern.ch/dbs/int/phys03/' #For testing
-#dbs url: 'https://cmsweb.cern.ch/dbs/prod/phys03/' #For production
-#publish user: username #option to overwrite the username to use for publishing, in case it is different from the environment var $USER
-#recycle sandbox: /tmpscratch/users/awoodard/sandbox.tar.bz2 #Option to specify sandbox instead of creating one at startup
 
 use dashboard: true
 check proxy: true
 
+### optional ###
+# stageout server: "earth.crc.nd.edu:9094"
+# sandbox blacklist: ['*DrawPlots*'] # specify directories in CMSSW work area to omit from sandbox
+# dbs url: 'https://cmsweb-testbed.cern.ch/dbs/int/phys03/' # DBS url to publish to (for testing)
+# dbs url: 'https://cmsweb.cern.ch/dbs/prod/phys03/' # DBS url to publish to (for production)
+# publish user: username # overwrite the username to use for publishing, in case it is different from the environment var $USER
+# recycle sandbox: path/to/sandbox.tar.bz2 # specify sandbox instead of creating one at startup
+################
+
+### use configuration below to run non-cmsRun jobs ###
 # cmd: 'python make_big_file.py'
 # inputs: ['make_big_file.py']
 # outputs: ['output.txt', 'log.txt']
 # max: 5000
-### use configuration above to run simple jobs ###
+######################################################
 
 task defaults:
     cmssw config: makeBEAN_cfg.py
@@ -26,7 +28,7 @@ task defaults:
     # optional renaming of files, based on their basename and extension:
     # output format: "this_is_file_{id}_{base}.{ext}"
     publish label: 'test'
-    #lumis per job: 25 
+    #lumis per job: 25
     matching:
       - label: '2012[AB]$' #match all labels with 2012A or 2012B
         lumi mask: examples/json/Cert_190456-196531_8TeV_13Jul2012ReReco_Collisions12_JSON.txt
