Allow plotting to be run from the mainloop.
Also provides a hook for #38 in the Actions object.

--- a/examples/beanprod.yaml
+++ b/examples/beanprod.yaml
@@ -1,5 +1,6 @@
 id: <your id here>
 workdir: <your working directory here>
+plotdir: <your plotting directory here>
 stageout location: <your stageout directory here>
 
 use dashboard: true
