Rename `stageout server` → `chirp server`.
This is in preparation of adding an xrootd server option to stream local
files instead of staging them in via chirp or WQ.

--- a/examples/beanprod.yaml
+++ b/examples/beanprod.yaml
@@ -24,7 +24,7 @@ advanced:
 
 ### optional
 ## chirp server to use for stage-in / stage-out
-# stageout server: "earth.crc.nd.edu:9094"
+# chirp server: "earth.crc.nd.edu:9094"
 ## specify directories in CMSSW work area to omit from sandbox
 # sandbox blacklist: ['*DrawPlots*']
 ## DBS instance to publish to
