--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@ email: mwolf3@nd.edu, awoodard@nd.edu
 description: > # this means to ignore newlines until "baseurl:"
   Lobster is a user tool to run workflows requiring CMS infrastructure at a
   large scale at non-WLCG sites.
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+# baseurl: "" # the subpath of your site, e.g. /blog/
+# url: "http://yourdomain.com" # the base hostname & protocol for your site
+# twitter_username: jekyllrb
+# github_username:  jekyll
 
 # Build settings
 markdown: kramdown
