--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Opportunistic Computing with Lobster
+title: Lobster
 email: mwolf3@nd.edu, awoodard@nd.edu
 description: > # this means to ignore newlines until "baseurl:"
   Lobster is a user tool to run workflows requiring CMS infrastructure at a
