--- a/examples/mc_production.yaml
+++ b/examples/mc_production.yaml
@@ -25,6 +25,10 @@ use dashboard: true
 ## merge output files to this size
 merge size: 3.5G
 
+
+## optional: if a job exits with a code in this list, the host it ran on will be blacklisted
+# bad exit codes: [1, 2]
+
 ## optional: specify directories in CMSSW work area to omit from sandbox
 # sandbox blacklist: ['*DrawPlots*']
 
