--- a/examples/mc_production.yaml
+++ b/examples/mc_production.yaml
@@ -1,6 +1,6 @@
 ## This is an arbitrary label for your Lobster project
 id: <your id here>
-## This is the area Lobster uses to store files (e.g. database, logs).  Should normally be in 
+## This is the area Lobster uses to store files (e.g. database, logs).  Should normally be in
 ## a local directory (i.e. not AFS, e.g. /tmpscratch)
 workdir: <your working directory here>
 ## optional: to automatically update monitoring plots
@@ -19,7 +19,7 @@ storage:
     input: "root://xrootd-cms.infn.it//store/user/<user>/<output directory>"
     output: "srm://srm-eoscms.cern.ch:8443/srm/v2/server?SFN=/eos/cms/store/user/<user>/<output directory>"
 
-## report jobs to the CMS dashboard
+## report jobs to the CMS dashboard (default: true)
 use dashboard: true
 
 ## merge output files to this size
